packages/message-parser/grammar.ts
// import lib
import {
    bold,
    italic,
    plain,
    link,
    paragraph,
    code,
    heading,
    strike,
    inlineCode } from './utils';

// Generated by PEG.js v. 0.10.0 (ts-pegjs plugin v. 0.3.1 )
//
// https://pegjs.org/   https://github.com/metadevpro/ts-pegjs

"use strict";

export interface IFilePosition {
  offset: number;
  line: number;
  column: number;
}

export interface IFileRange {
  start: IFilePosition;
  end: IFilePosition;
}

export interface ILiteralExpectation {
  type: "literal";
  text: string;
  ignoreCase: boolean;
}

export interface IClassParts extends Array<string | IClassParts> {}

export interface IClassExpectation {
  type: "class";
  parts: IClassParts;
  inverted: boolean;
  ignoreCase: boolean;
}

export interface IAnyExpectation {
  type: "any";
}

export interface IEndExpectation {
  type: "end";
}

export interface IOtherExpectation {
  type: "other";
  description: string;
}

export type Expectation = ILiteralExpectation | IClassExpectation | IAnyExpectation | IEndExpectation | IOtherExpectation;

export class SyntaxError extends Error {
  public static buildMessage(expected: Expectation[], found: string | null) {
    function hex(ch: string): string {
      return ch.charCodeAt(0).toString(16).toUpperCase();
    }

    function literalEscape(s: string): string {
      return s
        .replace(/\\/g, "\\\\")
        .replace(/"/g,  "\\\"")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,            (ch) => "\\x0" + hex(ch) )
        .replace(/[\x10-\x1F\x7F-\x9F]/g, (ch) => "\\x"  + hex(ch) );
    }

    function classEscape(s: string): string {
      return s
        .replace(/\\/g, "\\\\")
        .replace(/\]/g, "\\]")
        .replace(/\^/g, "\\^")
        .replace(/-/g,  "\\-")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,            (ch) => "\\x0" + hex(ch) )
        .replace(/[\x10-\x1F\x7F-\x9F]/g, (ch) => "\\x"  + hex(ch) );
    }

    function describeExpectation(expectation: Expectation) {
      switch (expectation.type) {
        case "literal":
          return "\"" + literalEscape(expectation.text) + "\"";
        case "class":
          const escapedParts = expectation.parts.map((part) => {
            return Array.isArray(part)
              ? classEscape(part[0] as string) + "-" + classEscape(part[1] as string)
              : classEscape(part);
          });

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        case "any":
          return "any character";
        case "end":
          return "end of input";
        case "other":
          return expectation.description;
      }
    }

    function describeExpected(expected1: Expectation[]) {
      const descriptions = expected1.map(describeExpectation);
      let i: number;
      let j: number;

      descriptions.sort();

      if (descriptions.length > 0) {
        for (i = 1, j = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found1: string | null) {
      return found1 ? "\"" + literalEscape(found1) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  }

  public message: string;
  public expected: Expectation[];
  public found: string | null;
  public location: IFileRange;
  public name: string;

  constructor(message: string, expected: Expectation[], found: string | null, location: IFileRange) {
    super();
    this.message = message;
    this.expected = expected;
    this.found = found;
    this.location = location;
    this.name = "SyntaxError";

    if (typeof (Error as any).captureStackTrace === "function") {
      (Error as any).captureStackTrace(this, SyntaxError);
    }
  }
}

function peg$parse(input: string, options?: IParseOptions) {
  options = options !== undefined ? options : {};

  const peg$FAILED: Readonly<any> = {};

  const peg$startRuleFunctions: {[id: string]: any} = { start: peg$parsestart };
  let peg$startRuleFunction: () => any = peg$parsestart;

  const peg$c0 = function(text: any): any { return paragraph([plain("")])};
  const peg$c1 = function(value: any): any { return paragraph(value) };
  const peg$c2 = function(text: any): any {
  	return plain(text)
  };
  const peg$c3 = /^[1-9]/;
  const peg$c4 = peg$classExpectation([["1", "9"]], false, false);
  const peg$c5 = peg$anyExpectation();
  const peg$c6 = "\r\n";
  const peg$c7 = peg$literalExpectation("\r\n", false);
  const peg$c8 = "\r";
  const peg$c9 = peg$literalExpectation("\r", false);
  const peg$c10 = "\n";
  const peg$c11 = peg$literalExpectation("\n", false);
  const peg$c12 = " ";
  const peg$c13 = peg$literalExpectation(" ", false);
  const peg$c14 = "\t";
  const peg$c15 = peg$literalExpectation("\t", false);
  const peg$c16 = /^[ -']/;
  const peg$c17 = peg$classExpectation([[" ", "'"]], false, false);
  const peg$c18 = /^[+-@]/;
  const peg$c19 = peg$classExpectation([["+", "@"]], false, false);
  const peg$c20 = /^[A-Z]/;
  const peg$c21 = peg$classExpectation([["A", "Z"]], false, false);
  const peg$c22 = /^[a-z]/;
  const peg$c23 = peg$classExpectation([["a", "z"]], false, false);
  const peg$c24 = /^[`-z]/;
  const peg$c25 = peg$classExpectation([["`", "z"]], false, false);
  const peg$c26 = /^[ -*]/;
  const peg$c27 = peg$classExpectation([[" ", "*"]], false, false);
  const peg$c28 = /^[A-[]/;
  const peg$c29 = peg$classExpectation([["A", "["]], false, false);
  const peg$c30 = /^[A-_]/;
  const peg$c31 = peg$classExpectation([["A", "_"]], false, false);
  const peg$c32 = /^[a-~]/;
  const peg$c33 = peg$classExpectation([["a", "~"]], false, false);
  const peg$c34 = /^[ -@]/;
  const peg$c35 = peg$classExpectation([[" ", "@"]], false, false);
  const peg$c36 = /^[A-`]/;
  const peg$c37 = peg$classExpectation([["A", "`"]], false, false);
  const peg$c38 = /^[a-\xFFFF]/;
  const peg$c39 = peg$classExpectation([["a", "\xFF"], "F", "F"], false, false);
  const peg$c40 = /^[\-]/;
  const peg$c41 = peg$classExpectation(["-"], false, false);
  const peg$c42 = function(head: any, text: any, tail: any): any {
  	return plain( head.join('') + text.join("") + tail.join(''))
  };
  const peg$c43 = "# ";
  const peg$c44 = peg$literalExpectation("# ", false);
  const peg$c45 = function(text: any): any {
    	return heading(text);
  };
  const peg$c46 = function(text: any): any {
      return {
       section: text.join("")
      }
  };
  const peg$c47 = /^[*]/;
  const peg$c48 = peg$classExpectation(["*"], false, false);
  const peg$c49 = function(text: any): any {
      return italic(text)
  };
  const peg$c50 = /^[_]/;
  const peg$c51 = peg$classExpectation(["_"], false, false);
  const peg$c52 = function(text: any): any {
      return bold(text)
    };
  const peg$c53 = /^[~]/;
  const peg$c54 = peg$classExpectation(["~"], false, false);
  const peg$c55 = function(text: any): any {
  	return strike(text);
    };
  const peg$c56 = "* ";
  const peg$c57 = peg$literalExpectation("* ", false);
  const peg$c58 = "- ";
  const peg$c59 = peg$literalExpectation("- ", false);
  const peg$c60 = function(text: any): any {return text.join("").trim()};
  const peg$c61 = "- [x] ";
  const peg$c62 = peg$literalExpectation("- [x] ", false);
  const peg$c63 = "- [ ] ";
  const peg$c64 = peg$literalExpectation("- [ ] ", false);
  const peg$c65 = function(): any {return text.join("").trim()};
  const peg$c66 = "  ";
  const peg$c67 = peg$literalExpectation("  ", false);
  const peg$c68 = ". ";
  const peg$c69 = peg$literalExpectation(". ", false);
  const peg$c70 = function(text: any): any { return paragraph(text) };
  const peg$c71 = function(lists: any): any {
     return {
      lists: lists
     }
  };
  const peg$c72 = function(tasks: any): any {
     return {
      tasks: tasks
     }
  };
  const peg$c73 = function(lists: any): any {
     return {
      listsOrdered: lists
     }
  };
  const peg$c74 = "bash";
  const peg$c75 = peg$literalExpectation("bash", false);
  const peg$c76 = "c";
  const peg$c77 = peg$literalExpectation("c", false);
  const peg$c78 = "cpp";
  const peg$c79 = peg$literalExpectation("cpp", false);
  const peg$c80 = "html";
  const peg$c81 = peg$literalExpectation("html", false);
  const peg$c82 = "javascript";
  const peg$c83 = peg$literalExpectation("javascript", false);
  const peg$c84 = "js";
  const peg$c85 = peg$literalExpectation("js", false);
  const peg$c86 = "json";
  const peg$c87 = peg$literalExpectation("json", false);
  const peg$c88 = "java";
  const peg$c89 = peg$literalExpectation("java", false);
  const peg$c90 = "ruby";
  const peg$c91 = peg$literalExpectation("ruby", false);
  const peg$c92 = /^[`]/;
  const peg$c93 = peg$classExpectation(["`"], false, false);
  const peg$c94 = function(text: any): any {return inlineCode(text)};
  const peg$c95 = "```";
  const peg$c96 = peg$literalExpectation("```", false);
  const peg$c97 = function(type: any, value: any): any {
  	return code(value.join('\n'))
  };
  const peg$c98 = /^[[]/;
  const peg$c99 = peg$classExpectation(["["], false, false);
  const peg$c100 = /^[\]]/;
  const peg$c101 = peg$classExpectation(["]"], false, false);
  const peg$c102 = function(text: any): any {return text};
  const peg$c103 = function(): any {return ""};
  const peg$c104 = /^[(]/;
  const peg$c105 = peg$classExpectation(["("], false, false);
  const peg$c106 = /^[)]/;
  const peg$c107 = peg$classExpectation([")"], false, false);
  const peg$c108 = function(title: any, href: any): any {
  	 return link([title, href])
      };
  const peg$c109 = "";
  const peg$c110 = function(title: any, href: any): any {
       return link(title, href)
  //     return {

    //    references: {
      //    title: title,
         // href: href,
        //  image: isImage(href)
       // }
       //}
      };
  const peg$c111 = /^[0-9a-f]/i;
  const peg$c112 = peg$classExpectation([["0", "9"], ["a", "f"]], false, true);
  const peg$c113 = /^[\x80-\uFFFF]/;
  const peg$c114 = peg$classExpectation([["\x80", "\uFFFF"]], false, false);
  const peg$c115 = "\\";
  const peg$c116 = peg$literalExpectation("\\", false);
  const peg$c117 = /^[ \t\r\n\f]/;
  const peg$c118 = peg$classExpectation([" ", "\t", "\r", "\n", "\f"], false, false);
  const peg$c119 = function(digits: any): any {
        return String.fromCharCode(parseInt(digits, 16));
      };
  const peg$c120 = /^[^\r\n\f0-9a-f]/i;
  const peg$c121 = peg$classExpectation(["\r", "\n", "\f", ["0", "9"], ["a", "f"]], true, true);
  const peg$c122 = function(ch: any): any { return ch; };
  const peg$c123 = /^[_a-z]/i;
  const peg$c124 = peg$classExpectation(["_", ["a", "z"]], false, true);
  const peg$c125 = /^[_a-z0-9\-]/i;
  const peg$c126 = peg$classExpectation(["_", ["a", "z"], ["0", "9"], "-"], false, true);
  const peg$c127 = "\"";
  const peg$c128 = peg$literalExpectation("\"", false);
  const peg$c129 = /^[^\n\r\f\\"]/;
  const peg$c130 = peg$classExpectation(["\n", "\r", "\f", "\\", "\""], true, false);
  const peg$c131 = function(nl: any): any { return ""; };
  const peg$c132 = function(chars: any): any {
        return chars.join("");
      };
  const peg$c133 = "'";
  const peg$c134 = peg$literalExpectation("'", false);
  const peg$c135 = /^[^\n\r\f\\']/;
  const peg$c136 = peg$classExpectation(["\n", "\r", "\f", "\\", "'"], true, false);
  const peg$c137 = /^[_a-zA-Z0-9\-\n]/;
  const peg$c138 = peg$classExpectation(["_", ["a", "z"], ["A", "Z"], ["0", "9"], "-", "\n"], false, false);
  const peg$c139 = function(chars: any): any { return chars.join("")};
  const peg$c140 = "/*";
  const peg$c141 = peg$literalExpectation("/*", false);
  const peg$c142 = /^[^*]/;
  const peg$c143 = peg$classExpectation(["*"], true, false);
  const peg$c144 = "*";
  const peg$c145 = peg$literalExpectation("*", false);
  const peg$c146 = /^[^\/*]/;
  const peg$c147 = peg$classExpectation(["/", "*"], true, false);
  const peg$c148 = "/";
  const peg$c149 = peg$literalExpectation("/", false);
  const peg$c150 = "-";
  const peg$c151 = peg$literalExpectation("-", false);
  const peg$c152 = function(prefix: any, start: any, chars: any): any {
        return prefix + start + chars.join("");
      };
  const peg$c153 = function(chars: any): any { return chars.join(""); };
  const peg$c154 = /^[+\-]/;
  const peg$c155 = peg$classExpectation(["+", "-"], false, false);
  const peg$c156 = /^[0-9]/;
  const peg$c157 = peg$classExpectation([["0", "9"]], false, false);
  const peg$c158 = ".";
  const peg$c159 = peg$literalExpectation(".", false);
  const peg$c160 = "e";
  const peg$c161 = peg$literalExpectation("e", false);
  const peg$c162 = function(): any {
        return parseFloat(text());
      };
  const peg$c163 = /^[!#$%&*-[\]-~]/;
  const peg$c164 = peg$classExpectation(["!", "#", "$", "%", "&", ["*", "["], ["]", "~"]], false, false);
  const peg$c165 = "\f";
  const peg$c166 = peg$literalExpectation("\f", false);

  let peg$currPos = 0;
  let peg$savedPos = 0;
  const peg$posDetailsCache = [{ line: 1, column: 1 }];
  let peg$maxFailPos = 0;
  let peg$maxFailExpected: Expectation[] = [];
  let peg$silentFails = 0;

  let peg$result;

  if (options.startRule !== undefined) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text(): string {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location(): IFileRange {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description: string, location1?: IFileRange) {
    location1 = location1 !== undefined
      ? location1
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location1
    );
  }

  function error(message: string, location1?: IFileRange) {
    location1 = location1 !== undefined
      ? location1
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location1);
  }

  function peg$literalExpectation(text1: string, ignoreCase: boolean): ILiteralExpectation {
    return { type: "literal", text: text1, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts: IClassParts, inverted: boolean, ignoreCase: boolean): IClassExpectation {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation(): IAnyExpectation {
    return { type: "any" };
  }

  function peg$endExpectation(): IEndExpectation {
    return { type: "end" };
  }

  function peg$otherExpectation(description: string): IOtherExpectation {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos: number) {
    let details = peg$posDetailsCache[pos];
    let p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos: number, endPos: number): IFileRange {
    const startPosDetails = peg$computePosDetails(startPos);
    const endPosDetails = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected1: Expectation) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected1);
  }

  function peg$buildSimpleError(message: string, location1: IFileRange) {
    return new SyntaxError(message, [], "", location1);
  }

  function peg$buildStructuredError(expected1: Expectation[], found: string | null, location1: IFileRange) {
    return new SyntaxError(
      SyntaxError.buildMessage(expected1, found),
      expected1,
      found,
      location1
    );
  }

  function peg$parsestart(): any {
    let s0, s1, s2;

    s0 = [];
    s1 = peg$parseBlocks();
    if (s1 === peg$FAILED) {
      s1 = peg$parseInline();
      if (s1 === peg$FAILED) {
        s1 = peg$currPos;
        s2 = peg$parseEndOfLine();
        if (s2 !== peg$FAILED) {
          peg$savedPos = s1;
          s2 = peg$c0(s2);
        }
        s1 = s2;
      }
    }
    if (s1 !== peg$FAILED) {
      while (s1 !== peg$FAILED) {
        s0.push(s1);
        s1 = peg$parseBlocks();
        if (s1 === peg$FAILED) {
          s1 = peg$parseInline();
          if (s1 === peg$FAILED) {
            s1 = peg$currPos;
            s2 = peg$parseEndOfLine();
            if (s2 !== peg$FAILED) {
              peg$savedPos = s1;
              s2 = peg$c0(s2);
            }
            s1 = s2;
          }
        }
      }
    } else {
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseBlocks(): any {
    let s0;

    s0 = peg$parseHeading();
    if (s0 === peg$FAILED) {
      s0 = peg$parseMultiplelLineCode();
      if (s0 === peg$FAILED) {
        s0 = peg$parseTasks();
        if (s0 === peg$FAILED) {
          s0 = peg$parseLists();
          if (s0 === peg$FAILED) {
            s0 = peg$parseOrderedLists();
            if (s0 === peg$FAILED) {
              s0 = peg$parseReferencesEmpty();
              if (s0 === peg$FAILED) {
                s0 = peg$parseSection();
              }
            }
          }
        }
      }
    }

    return s0;
  }

  function peg$parseEmphasis(): any {
    let s0;

    s0 = peg$parseBold();
    if (s0 === peg$FAILED) {
      s0 = peg$parseItalic();
      if (s0 === peg$FAILED) {
        s0 = peg$parseStrikethrough();
      }
    }

    return s0;
  }

  function peg$parseInline(): any {
    let s0, s1, s2;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parseReferences();
    if (s2 === peg$FAILED) {
      s2 = peg$parseInlineCode();
      if (s2 === peg$FAILED) {
        s2 = peg$parseEmphasis();
        if (s2 === peg$FAILED) {
          s2 = peg$parsePlain();
        }
      }
    }
    if (s2 !== peg$FAILED) {
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        s2 = peg$parseReferences();
        if (s2 === peg$FAILED) {
          s2 = peg$parseInlineCode();
          if (s2 === peg$FAILED) {
            s2 = peg$parseEmphasis();
            if (s2 === peg$FAILED) {
              s2 = peg$parsePlain();
            }
          }
        }
      }
    } else {
      s1 = peg$FAILED;
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseEndOfLine();
      if (s2 === peg$FAILED) {
        s2 = null;
      }
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c1(s1);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsePlain(): any {
    let s0, s1;

    s0 = peg$parseLine();
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parseAnyText2();
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c2(s1);
      }
      s0 = s1;
    }

    return s0;
  }

  function peg$parseDigit1_9(): any {
    let s0;

    if (peg$c3.test(input.charAt(peg$currPos))) {
      s0 = input.charAt(peg$currPos);
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c4); }
    }

    return s0;
  }

  function peg$parseEOF(): any {
    let s0, s1;

    s0 = peg$currPos;
    peg$silentFails++;
    if (input.length > peg$currPos) {
      s1 = input.charAt(peg$currPos);
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c5); }
    }
    peg$silentFails--;
    if (s1 === peg$FAILED) {
      s0 = undefined;
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsecrlf(): any {
    let s0;

    if (input.substr(peg$currPos, 2) === peg$c6) {
      s0 = peg$c6;
      peg$currPos += 2;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c7); }
    }
    if (s0 === peg$FAILED) {
      if (input.charCodeAt(peg$currPos) === 13) {
        s0 = peg$c8;
        peg$currPos++;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c9); }
      }
      if (s0 === peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 10) {
          s0 = peg$c10;
          peg$currPos++;
        } else {
          s0 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c11); }
        }
      }
    }

    return s0;
  }

  function peg$parseEatLine(): any {
    let s0, s1, s2, s3, s4;

    s0 = [];
    s1 = peg$currPos;
    s2 = peg$currPos;
    peg$silentFails++;
    s3 = peg$parsecrlf();
    peg$silentFails--;
    if (s3 === peg$FAILED) {
      s2 = undefined;
    } else {
      peg$currPos = s2;
      s2 = peg$FAILED;
    }
    if (s2 !== peg$FAILED) {
      s3 = peg$currPos;
      peg$silentFails++;
      s4 = peg$parseEOF();
      peg$silentFails--;
      if (s4 === peg$FAILED) {
        s3 = undefined;
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      if (s3 !== peg$FAILED) {
        if (input.length > peg$currPos) {
          s4 = input.charAt(peg$currPos);
          peg$currPos++;
        } else {
          s4 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c5); }
        }
        if (s4 !== peg$FAILED) {
          s2 = [s2, s3, s4];
          s1 = s2;
        } else {
          peg$currPos = s1;
          s1 = peg$FAILED;
        }
      } else {
        peg$currPos = s1;
        s1 = peg$FAILED;
      }
    } else {
      peg$currPos = s1;
      s1 = peg$FAILED;
    }
    while (s1 !== peg$FAILED) {
      s0.push(s1);
      s1 = peg$currPos;
      s2 = peg$currPos;
      peg$silentFails++;
      s3 = peg$parsecrlf();
      peg$silentFails--;
      if (s3 === peg$FAILED) {
        s2 = undefined;
      } else {
        peg$currPos = s2;
        s2 = peg$FAILED;
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$currPos;
        peg$silentFails++;
        s4 = peg$parseEOF();
        peg$silentFails--;
        if (s4 === peg$FAILED) {
          s3 = undefined;
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
        if (s3 !== peg$FAILED) {
          if (input.length > peg$currPos) {
            s4 = input.charAt(peg$currPos);
            peg$currPos++;
          } else {
            s4 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c5); }
          }
          if (s4 !== peg$FAILED) {
            s2 = [s2, s3, s4];
            s1 = s2;
          } else {
            peg$currPos = s1;
            s1 = peg$FAILED;
          }
        } else {
          peg$currPos = s1;
          s1 = peg$FAILED;
        }
      } else {
        peg$currPos = s1;
        s1 = peg$FAILED;
      }
    }

    return s0;
  }

  function peg$parseEndOfLine(): any {
    let s0;

    if (input.substr(peg$currPos, 2) === peg$c6) {
      s0 = peg$c6;
      peg$currPos += 2;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c7); }
    }
    if (s0 === peg$FAILED) {
      if (input.charCodeAt(peg$currPos) === 10) {
        s0 = peg$c10;
        peg$currPos++;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c11); }
      }
      if (s0 === peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 13) {
          s0 = peg$c8;
          peg$currPos++;
        } else {
          s0 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c9); }
        }
      }
    }

    return s0;
  }

  function peg$parseSpace(): any {
    let s0, s1;

    s0 = [];
    if (input.charCodeAt(peg$currPos) === 32) {
      s1 = peg$c12;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c13); }
    }
    if (s1 !== peg$FAILED) {
      while (s1 !== peg$FAILED) {
        s0.push(s1);
        if (input.charCodeAt(peg$currPos) === 32) {
          s1 = peg$c12;
          peg$currPos++;
        } else {
          s1 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c13); }
        }
      }
    } else {
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      if (input.charCodeAt(peg$currPos) === 9) {
        s0 = peg$c14;
        peg$currPos++;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c15); }
      }
    }

    return s0;
  }

  function peg$parseAnyText(): any {
    let s0;
